--- a/slides/04-binomial/binomial.Rmd
+++ b/slides/04-binomial/binomial.Rmd
@@ -90,8 +90,7 @@ For Binomial model, we input $(\text{successes}_i, \text{failures}_i)$ as respon
 library(gtsummary)
 lmod <- glm(cbind(damage, 6 - damage) ~ temp, family = binomial, data = orings)
 lmod %>%
-  tbl_regression() %>%
-  bold_labels()
+  tbl_regression(intercept = TRUE)
 ```
 
 Let's fit an equivalent (weighted) Bernoulli model. Not surprisingly, we get identical estimate.
@@ -102,8 +101,7 @@ orings %>%
   mutate(damage = rep(c(1, 0), 23)) %>%
   mutate(obs_wt = obs_wt) %>%
   glm(damage ~ temp, weights = obs_wt, family = binomial, data = .) %>%
-  tbl_regression() %>%
-  bold_labels()
+  tbl_regression(intercept = TRUE)
 ```
 
 ## Goodness of fit
@@ -114,16 +112,17 @@ orings %>%
   & & - 2 \sum_i y_i \log(\widehat{p}_i) + (m_i - y_i) \log(1 - \widehat{p}_i) \\
   &=& 2 \sum_i y_i \log(y_i / \widehat{y}_i) + (m_i - y_i) \log(m_i - y_i)/(m_i - \widehat{y}_i),
 \end{eqnarray*}
-where $\widehat{y}_i$ are the fitted values from the model.  
+where $\widehat{y}_i$ are the fitted values from the model. 
 
 - When $Y$ is truely binomial and $m_i$ are relatively large, the deviance $D$ is approximately $\chi^2$ distributed with $n - q - 1$ degrees of freedom if the model is correct. The large p-value indicates that the model has an adequate fit.
 ```{r}
 pchisq(lmod$deviance, lmod$df.residual, lower = FALSE)
 ```
+A rule of thumb to use this asymptotic approximation is $m_i \ge 5$.
 
-- Significance of predictor `temp` can be evaluated using a similar analysis of deviance test.
+- Significance of the predictor `temp` can be evaluated using a similar analysis of deviance test.
 ```{r}
-anova(lmod, test = "Chi")
+drop1(lmod, test = "Chi")
 ```
 
 ## Pearson $X^2$
@@ -164,7 +163,7 @@ in analogy to $\text{RSS} = \sum_i r_i^2$ in linear regression.
 - Plot deviance residuals against linear predictors to identify potential high residual observations.
 ```{r}
 orings %>%
-  mutate(devres = residuals(lmod, type = "deviance"),
+  mutate(devres  = residuals(lmod, type = "deviance"),
          linpred = predict(lmod, type = "link")) %>%
   ggplot + 
   geom_point(mapping = aes(x = linpred, y = devres)) +
@@ -194,7 +193,7 @@ orings %>%
 
     2. Outliers. A few outliers with large deviance. If there are many, then we may have assumed the wrong error distribution for $Y$.
 
-    3. Sparse data. If binomial batch sizes are all small, then the $\chi^2$ approximation is bad. Rule of thumb for using the $\chi^2$ approximation is $n_i \ge 5$ for all batches.
+    3. Sparse data. If binomial batch sizes are all small, then the $\chi^2$ approximation is bad. Rule of thumb for using the $\chi^2$ approximation is $m_i \ge 5$ for all batches.
 
     4. Overdisperson or underdisperson. 
 
@@ -204,7 +203,7 @@ orings %>%
     
     - Are the failure probability of those 6 O-rings in a space shuttle same?  
     
-- Violation of the iid (identically and independently distributed) assumption of Bernoulli trials. (HW2: compare the variance of beta-binomial to that of binomial.)
+- Violation of the iid (identically and independently distributed) assumption of Bernoulli trials can lead to inflation of variance. (HW2: compare the variance of beta-binomial to that of binomial.)
 
 - We can relax the assumption of binomial distribution by allowing an **overdispersion parameter**
 $$
@@ -274,8 +273,15 @@ with
 \mathbb{E}(U_i) &=& 0, \quad
 \operatorname{Var}(U_i) = \frac{1}{\phi V(\mu_i)} \\ - \mathbb{E} \frac{\partial U_i}{\partial \mu_i} &=& - \mathbb{E} \frac{- \phi V(\mu_i) - (Y_i - \mu_i) \phi V'(\mu_i)}{[\phi V(\mu_i)]^2} = \frac{1}{\phi V(\mu_i)}.
 \end{eqnarray*}
+**HW2**: Verify that the log-likilihood $\ell_i$ of a binomial proportion $Y_i$, where $m_i Y_i \sim \text{Bin}(m_i, p_i)$, satisfies  
+\begin{eqnarray*}
+\mathbb{E} \frac{\partial \ell_i}{\partial \mu_i} &=& 0 \\
+\operatorname{var} \frac{\partial \ell_i}{\partial \mu_i} &=& \frac{1}{\phi V(\mu_i)} \\
+\mathbb{E} \frac{\partial \ell_i^2}{\partial^2 \mu_i} &=& - \frac{1}{\phi V(\mu_i)},
+\end{eqnarray*}
+with $\phi = 1$, $\mu_i = p_i$, and $V(\mu_i)=p_i (1 - p_i)/m_i$.
 
-- $U_i$ acts like the derivative of a log-likelihood. Thus we define
+- $U_i$ acts like the derivative of a log-likelihood (score function). Thus we define
 $$
 Q_i = \int_{y_i}^{\mu_i} \frac{y_i - t}{\phi V(t)} \, dt
 $$
@@ -284,6 +290,11 @@ $$
 Q = \sum_{i=1}^n Q_i
 $$
 as a log **quasi-likelihood**.
+
+- $\widehat{\beta}$ is obtained by maximizing $Q$ and
+$$
+\widehat{\phi} = \frac{X^2}{n - p}.
+$$
 
 - The `mammalsleep` data records the sleep behavior of 62 mammals.
 ```{r}
