--- a/_posts/2020-04-16-week3-day2.md
+++ b/_posts/2020-04-16-week3-day2.md
@@ -10,6 +10,6 @@ category: biostat200Cspring2020
 
 ## Announcement
 
-* Correction about my code for [training/validation split] ](https://ucla-biostat-200c-2020spring.github.io/slides/03-binary/binary.html#model-selection-by-lasso) in lecture notes.
+* Correction about my code for [training/validation split](https://ucla-biostat-200c-2020spring.github.io/slides/03-binary/binary.html#model-selection-by-lasso) in lecture notes.
 
 
